# BiddingInformation

./: AGENTS.md  README.md  bidding_feed.xml  bidding_history.db  index.html  pyproject.toml  requirements.txt  update.bat
.claude/: settings.local.json
.github/workflows/: crawler.yml  daily-crawl.yml  deploy.yml
config/: bidding_scraper.yaml
docs/: scheduled-task.md
output/: bidding_feed.xml  bidding_history.db  index.html
scripts/: bidding_scraper.py  notify_feishu.py  serve_web.py
scripts/bidding_scraper/: __init__.py  __main__.py  base_crawler.py  config.py  database.py  filters.py  logger.py  main.py  models.py  output.py  utils.py
scripts/bidding_scraper/crawlers/: __init__.py  ccgp.py  ccgp_yunnan.py  cebpubservice.py  chinabidding.py  chinatowercom.py  miit_txzbqy.py  tower_com_cn.py  yfbzb.py  ynggzy.py
