[project]
name = "irontower-information"
version = "1.0.0"
description = "铁塔招标信息聚合工具"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28",
    "PyYAML>=6.0",
    "tenacity>=8.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.scripts]
bidding-scraper = "scripts.bidding_scraper.main:main"
serve-web = "scripts.serve_web:main"
